--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
             <h1>Ola Mundo! Essa é a minha primeira página da Web.</h1>           </h1>
             <nav>
                 <ul>
-                    <li>Home</li>
-                    <li>Professores</li>
-                    <li>Fale Conosco</li>
-
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Professores.html">Professores</a></li>
+                    <li><a href="FaleConosco.html">Fale Conosco</a></li>
 
                 </ul>
             </nav>
