--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="Professores.html">Professores</a></li>
                     <li><a href="FaleConosco.html">Fale Conosco</a></li>
-
                 </ul>
             </nav>
         </header>
+        <main>
+            <section>
+                <img src="Fotos/foto1.jpg"width="500" alt="Devaria - Olá Mundo"/>
+            </section>
+        </main>
     </body>
 </html>
