Main da pagina e professores

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
+    <head
         <meta charset="utf-8" />
         <title>Olá Mundo!</title>
     </head>
@@ -20,5 +20,10 @@
                 <img src="Fotos/foto1.jpg"width="500" alt="Devaria - Olá Mundo"/>
             </section>
         </main>
+        <footer>
+            <span>contato@devaria.com.br</span> <br/>
+            <span>Conheça o nosso canal do Youtube!</span>
+
+        </footer>
     </body>
 </html>
