--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
             </section>
         </main>
         <footer>
-            <span>contato@devaria.com.br</span> <br/>
-            <span>Conheça o nosso canal do Youtube!</span>
-
+            <section>
+                <span>contato@devaria.com.br</span> <br/>
+                <span>Conheça o nosso canal do Youtube!</span>
+            </section>
         </footer>
     </body>
 </html>
