--- a/index.html
+++ b/index.html
@@ -1,30 +1,61 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head
-        <meta charset="utf-8" />
-        <title>Olá Mundo!</title>
-    </head>
-    <body>
-        <header>
-            <h1>Ola Mundo! Essa é a minha primeira página da Web.</h1>           </h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="Professores.html">Professores</a></li>
-                    <li><a href="FaleConosco.html">Fale Conosco</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <section>
-                <img src="Fotos/foto1.jpg"width="500" alt="Devaria - Olá Mundo"/>
-            </section>
-        </main>
-        <footer>
-            <section>
-                <span>contato@devaria.com.br</span> <br/>
-                <span>Conheça o nosso canal do Youtube!</span>
-            </section>
-        </footer>
-    </body>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="description" content="Devaria, excelente opcao para se tornar um desenvolvedor" />
+    <meta name="keywords" content="Devaria, aulas ao vivo, desenvolvimento de sistemas" />
+    <meta name="author" content="Daniel Castello" />
+    <meta http-equiv="Refresh" content="300" />
+
+    <title>Olá Mundo!</title>
+</head>
+
+<body>
+    <header>
+        <h1>Ola Mundo! Essa é a minha primeira página da Web.</h1>
+        </h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Professores.html">Professores</a></li>
+                <li><a href="FaleConosco.html">Fale Conosco</a></li>
+                <li><a href="DevStars.html">DevStars</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <figure>
+                <img src="Fotos/foto1.jpg" width="500" alt="Devaria - Olá Mundo" />
+                <figcaption>Foto de Capa Exercicio Devaria</figcaption>
+            </figure>
+        </section>
+        <!--video descontinuado...
+        <section>
+            <div> 
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/JM-ob19okVg" title="Apresentação" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
+    -->
+        <section>
+            <video width="320" heigth="240" controls="controls">
+                <source src="Videos/Video aula 2 HTML Devaria.mp4" type="video/mp4" </video>
+        </section>
+        <section>
+            <H3>Para que o <abbr title="Developers">Devs</abbr> fiquem sabendo, utilizamos <abbr
+                    title="Microsoft">MS</abbr> Azure</H3>
+            <blockquote cite="https://azure.microsoft.com/conta/gratuito">Veja como as organizações em todo o mundo
+                estão otimizando os custos e obtendo novas funcionalidades com o Azure</blockquote>
+        </section>
+
+    </main>
+    <footer>
+        <section>
+            <span>contato@devaria.com.br</span> <br />
+            <span>Conheça o nosso canal do Youtube!</span>
+        </section>
+    </footer>
+</body>
+
 </html>
